# donzo

./: Cargo.toml  README.md  build.rs
frontend/: app.js  index.html  input.css  login.html
src/: assets.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs
src/handlers/: api.rs  auth.rs  mod.rs  web.rs
tests/: integration.rs
