[package]
name = "donezo"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
rand = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-deflate", "compression-gzip", "compression-zstd", "trace", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "cookies"] }
tempfile = "3"
